crates/toml/tests/snapshots/invalid/inline-table/overwrite-04.stderr
TOML parse error at line 3, column 3
  |
3 | [[inline-t.nest]]
  |   ^^^^^^^^
cannot extend value of type inline table with a dotted key
